# headscale-fly-io

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  fly.example.toml  renovate.json
.github/assets/: headscale-on-fly.afphoto
.github/workflows/: build.yaml  integration-test.yaml  release.yml  renovate.yaml
charts/headscale/: .helmignore  Chart.yaml  README.md  values.yaml
charts/headscale/examples/: values-gateway-api.yaml  values-ingress-nginx.yaml  values-production.yaml  values-with-headplane.yaml  values-with-litestream.yaml
charts/headscale/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  deployment.yaml  gateway-api.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml  servicemonitor.yaml
headscale-back-to-sqlite/: main.py  pyproject.toml
headscale-fly-io/: Dockerfile  config-headplane.template.yaml  config-oidc.template.yaml  config.template.yaml  entrypoint.sh  litestream-entrypoint.sh  litestream-headplane.template.yaml  nginx.conf  nginx.template.conf
integration-test/: fly.toml
scripts/: release  release-headscale
